# GetColor

./: .gitignore  CMakeLists.txt  ColorPicker.cpp  ColorPicker.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  MouseDropper.cpp  MouseDropper.h  README.md  pack.iss  xmake.lua
src/: ColorPicker.cpp  ColorPicker.h  Main.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui  PixelPreview.cpp  PixelPreview.h
